--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "^2.4.3",
+    "body-parse": "^0.1.0",
     "config": "^3.0.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^6.2.0",
@@ -33,7 +34,8 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
     "morgan": "^1.9.1",
-    "pg": "^7.8.1"
+    "pg": "^7.8.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
