--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "migrate": "node --require babel-register server/db/db-connection.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --require babel-core/register --require babel-polyfill  app.js",
-    "dev": "nodemon --require babel-core/register --require babel-polyfill app.js"
+    "start": "node --require babel-core/register --require babel-polyfill  app.js"
+    
   },
   "engines": {
     "node": "10.x"
