--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "migrate": "node --require babel-register server/db/db-connection.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --require babel-core/register --require babel-polyfill  app.js"
+    "start": "babel-node app.js"
   },
   "engines": {
     "node": "10.x"
@@ -23,6 +23,9 @@
   "homepage": "https://github.com/EmyRukundo/epicmail_db#readme",
   "dependencies": {
     "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "bcryptjs": "^2.4.3",
     "body-parse": "^0.1.0",
@@ -38,10 +41,7 @@
     "uuid": "^3.3.2",
     "yamljs": "^0.3.0"
   },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-polyfill": "^6.26.0",
+  "devDependencies": {  
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
